--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_history">HistoryActivity</string>
     <string name="home_isolation_header"><u>Please answer these few questions daily.</u></string>
+    <string name="username"><u>Username</u></string>
 </resources>
